[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Dustin Bensing <dustin.bensing@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.2.0"


[dev-dependencies]
reqwest = "0.10.8"
tokio = "0.2.22"
