[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Dustin Bensing <dustin.bensing@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.2.0"
serde = { version = "1", features = ["derive"]}
config = "0.10.1"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
[dependencies.sqlx]
version = "0.4.1"
default-features = false
features = [ "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]


[dev-dependencies]
reqwest = "0.10.8"
tokio = "0.2.22"
